styles.css
:root {
--main-color: #18122B;
--gradient-start: #d6daff;
--gradient-end: #6359853f;
--form-bg-color: #635985;
--button-bg-color: #393053;
--invalid-input: #ca004d;
}

#container {
border: 1px solid var(--main-color);
display: flex;
flex-direction: row;

position: absolute;
width: 100%;
height: 100%;
box-sizing: border-box;
background: linear-gradient(180deg, var(--button-bg-color), var(--gradient-end));
}

#bar {
height: 10rem;
width: 100%;
background-color: var(--main-color);
position: absolute;
}

#logo-container {
flex: 1 1 40%;
display: flex;
align-items: center;
}

#form-container {
display: flex;
flex-direction: column;
justify-content: center;
flex: 1 1 60%;
display: flex;
align-items: center;
}

form {
height: 15rem;
width: 35rem;
}

fieldset {
width: 100%;
display: flex;
justify-content: space-around;
}

#form-card {
position: relative;
height: 100%;
width: 100%;
font-weight: 600;
background-color: var(--form-bg-color);
border-radius: 0;
color: white;
display: flex;
flex-direction: column;
justify-content: space-around;
align-items: center;
box-shadow: var(--main-color) 8px 8px;
z-index: 2;
border: var(--main-color) 2px solid;
}

#form-footer {
display: flex;
flex-direction: row;
justify-content: center;
align-items: center;
}

#submit {
position: relative;
width: 10rem;
height: 2rem;
border: none;
border-radius: .5rem;
font-size: 1.25rem;
font-family: serif;
font-weight: 600;
background-color: var(--button-bg-color);
right: 4.75rem;
margin: 1rem;
box-shadow: var(--main-color) 4px 4px;
color:var(--gradient-start)
}

#login {
position: relative;
right: 4rem;
}

#login-link {
font-weight: 700;
}

a {
color: var(--main-color);
}

#logo-card {
display: flex;
justify-content: flex-end;
align-items: center;
color: white;
width: 100%;
height: 10rem;
gap: 1rem;
z-index: 1;
}

#logo {
width: auto;
height: 9rem;
position: relative;
margin: .5rem;
margin-left: 10rem;
}

#title {
display: flex;
flex-direction: column;
font-size: 3.33rem;
font-weight: 900;
font-style: italic;
line-height: 1.25em;
}

#emp {
font-size: 3.5rem;
font-style: normal;
font-family: sans-serif;
align-self: flex-end;
}

h1 {
margin: 1em;
overflow: hidden;
min-width: 379px;
}

label{
font-size: 1.25rem;
}

input{
width: 13rem;
height: 1.5rem;
border-radius: .5rem;
border: 1px solid var(--main-color);
}

input:focus{
outline: 3px solid var(--button-bg-color);

}

input:hover{
    outline: 2px solid #d9d9d9;
}

#submit:active{
    position: relative;
    right: calc(4.75rem - 2px);
    background-color: var(--form-bg-color);
    top: 2px;
    box-shadow: var(--main-color)2px 2px;
}
#submit:hover{
    background-color: var(--form-bg-color);
}

.label{
margin-bottom: .25rem;
color: white;
text-shadow: #000000 2px 0 10px;
}

input:invalid{
    outline: 2px solid var(--invalid-input);
}
input:invalid:hover{
    outline: .5px solid var(--invalid-input);
}

#image{
    position: absolute;
    min-height: 40vh;
    width: 100%;
    z-index: 0;
    clip: rect(0px,10000px,50vh,0px);
}

